tests/paczka2/big_fuzzy/59753696.err
Error in line 4: HHO A35 4,8
Error in line 25: S26 A35 24,4
Error in line 10: mMjn S26 4,8
Error in line 30: q4nax3meP S26 31,8
Error in line 40: q4nax3meP S841 18,1
Error in line 16: Rrx24PzeU13 S26 93,9
Error in line 59: OfryETvg S986 -2,6
Error in line 60: q4nax3meP S2% 37,3
Error in line 58: OfryETvg S986 28,1
Error in line 63: mMjn S986 38,2
Error in line 61: q4nax3meP S841 90,1
Error in line 69: Rrx24PzeU13 S841 91,9
Error in line 72: Rrx24PzeU13 A35 72,3
Error in line 77: HHO S986 91,3
Error in line 81: HHO S841 89,9
Error in line 91: HHO S26 21,&
Error in line 86: HHO S986 91,1
Error in line 95: KD8p S841 23,3
Error in line 104: KD8p A35 48,6
Error in line 102: Rrx24PzeU13 A35 30,8
Error in line 121: q4nax3meP S986 89,5
Error in line 125: KD8p S986 340,8
Error in line 96: HHO S26 84,1
Error in line 134: Rrx24PzeU13 S986 99,5
Error in line 135: OfryETvg A35 100,0
Error in line 142: mMjn S986 98,9
Error in line 157: mMjn A35 26,1
Error in line 158: mMjn S841 26,5
Error in line 164: KD8p S841 19,4
Error in line 172: KD8p A35 53,4
Error in line 174: q4nax3meP S841 16,2
Error in line 179: KD8p S26 38,8
Error in line 173: S26 S986 1,7
Error in line 176: HHO S26 38,0
Error in line 187: mMjn S26 38,0
Error in line 195: mMjn A35 33,8
Error in line 207: HHO S986 27,0
Error in line 208: mMjn S26 82,9
Error in line 212: KD8p S986 16,8
Error in line 218: KD8p S841 37,3
Error in line 219: KD8p A35 14,3
Error in line 227: S26 S841 7,4
Error in line 233: mMjn S841 5,2
